[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/uipack/PNG/blue_button01.png" type="Texture" id=1]
[ext_resource path="res://assets/uipack/PNG/blue_button00.png" type="Texture" id=2]
[ext_resource path="res://UserInterfaceElements/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://UserInterfaceElements/heading1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/LoginScreen.gd" type="Script" id=5]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.211765, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -134.5
margin_right = 95.0
margin_bottom = 170.5
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 190.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Login"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 190.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 20 )

[node name="LabelUsername" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 190.0
margin_bottom = 78.0
text = "Username"

[node name="Username" type="LineEdit" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 190.0
margin_bottom = 110.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 190.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 10 )

[node name="LabelPassword" type="Label" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 190.0
margin_bottom = 146.0
text = "Password"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 190.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 190.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 30 )

[node name="ButtonLogin" type="TextureButton" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 190.0
margin_bottom = 265.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/ButtonLogin"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 269.0
margin_right = 190.0
margin_bottom = 283.0

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/CenterContainer"]
margin_left = 53.0
margin_right = 137.0
margin_bottom = 14.0
text = "new account"

[node name="ErrorMessage" type="Label" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 190.0
margin_bottom = 305.0
text = "Error"
[connection signal="pressed" from="VBoxContainer/ButtonLogin" to="." method="_on_ButtonLogin_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
